--- a/flask/blog/settings.toml
+++ b/flask/blog/settings.toml
@@ -3,5 +3,8 @@ mongo_uri = "mongodb://localhost:27017/blog"
 title = "Meu Blog"
 extensions = [
     "blog.database:configure",
-    "blog.commands:configure"
+    "blog.commands:configure",    
+    "flask_bootstrap:Bootstrap",
+    "blog.views:configure",
+    "blog.plugins:configure"
 ]
